--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
                 <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="google-site-verification" content="G-udCc0R3h1lct0loXyKSbNTgLEqL2HeST4a1jhrpRU" />
                 <title>Sultan Slot | Slot Gacor Sultan Slot Gampang Maxwin Rtp tertinggi dan Terpercaya</title>
-                <meta name="description" content="sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot" />
-                <meta name="Keywords" content="rajaslot88, Sultan Slot, raja88slot, slot gacor raja88, Sultan Slot gampang maxwin, Sultan Slot rtp tertinggi, raja slot88"/>
+                <meta name="description" content="sultanslot situs slot gacor terpercaya gampang maxwin dengan rtp tertinggi hari ini yang akan membuat permainan semakin gampang dimenangkan dan keuntungan yang besar." />
+                <meta name="Keywords" content="sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot"/>
                 <link itemprop="mainEntityOfPage" rel="canonical" href="http://sultanslot.kesk.in/" />
                 <meta name="robots" content="index, follow" />
                 <meta name="page-locale" content="id,en">
@@ -20,11 +20,11 @@
                 <!-- Twitter -->
                 <meta name="twitter:card" content="summary">
                 <meta name="twitter:title" content="Sultan Slot | Slot Gacor Sultan Slot Gampang Maxwin Rtp tertinggi dan Terpercaya">
-                <meta name="twitter:description" content="sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot">
+                <meta name="twitter:description" content="sultanslot situs slot gacor terpercaya gampang maxwin dengan rtp tertinggi hari ini yang akan membuat permainan semakin gampang dimenangkan dan keuntungan yang besar.">
                 <meta name="twitter:image:src" content="https://i.ibb.co/RQF5N55/17-10-SULTANSLOT.jpg">
                 <meta name="twitter:player" content="https://www.youtube.com/watch?v=xojCknCsQgs">
                 <meta name="og:title" content="Sultan Slot | Slot Gacor Sultan Slot Gampang Maxwin Rtp tertinggi dan Terpercaya">
-                <meta name="og:description" content="sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot">
+                <meta name="og:description" content="sultanslot situs slot gacor terpercaya gampang maxwin dengan rtp tertinggi hari ini yang akan membuat permainan semakin gampang dimenangkan dan keuntungan yang besar.">
                 <meta name="og:image" content="https://i.ibb.co/RQF5N55/17-10-SULTANSLOT.jpg">
                 <meta property="og:image:width" content="640">
                 <meta property="og:image:height" content="167">
@@ -39,7 +39,7 @@
                 <meta property="og:video:width" content="560">
                 <meta property="og:video:height" content="314"> 
                 <meta name="theme-color" content="#0a0a0a" />
-                <meta name="categories" content="rajaslot88, Sultan Slot, raja88slot, slot gacor raja88, Sultan Slot gampang maxwin, Sultan Slot rtp tertinggi, raja slot88" />
+                <meta name="categories" content="sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot" />
                 <meta name="language" content="ID">
                 <meta name="rating" content="general">
                 <meta name="copyright" content="rajaslot88">
@@ -154,7 +154,7 @@
                   "@id": "http://sultanslot.kesk.in/"
                 },
                 "headline": "Sultan Slot | Slot Gacor Sultan Slot Gampang Maxwin Rtp tertinggi dan Terpercaya",
-                "description": "sultanslot, Sultan Slot, SultanSlot gampang maxwin, situs sultanslot gampang menang, slot gacor sultanslot, sultanslot gampang jackpot",
+                "description": "sultanslot situs slot gacor terpercaya gampang maxwin dengan rtp tertinggi hari ini yang akan membuat permainan semakin gampang dimenangkan dan keuntungan yang besar.",
                 "image": [
                 "https://i.postimg.cc/s24YT7xb/google-chrome.png",
                 "https://i.postimg.cc/s24YT7xb/google-chrome.png"
@@ -435,12 +435,5 @@
               </a>
             </div>
                 </body>
-                <div style="display:none">
-    <a href="https://slotasia4d.nyc3.digitaloceanspaces.com/index.html">SLOT4D</a>
-    <a href="https://dewaslot77.nyc3.digitaloceanspaces.com/index.html">DEWASLOT77</a>
-    <a href="https://slotfilipina.fra1.digitaloceanspaces.com/index.html">SLOT FILIPINA</a>
-    <a href="https://slotnexus88.nyc3.digitaloceanspaces.com/index.html">SLOT NEXUS88</a>
-    <a href="https://websitempo.sgp1.digitaloceanspaces.com/index.html">SLOT MPO</a>
-   </div>
-            </body>
+                </body>
             </html>
